--- a/WebBellwether.Web/app/views/header.html
+++ b/WebBellwether.Web/app/views/header.html
@@ -34,9 +34,9 @@
                             <li>
                                 <a href="" class="dropdown-toggle">{{translation.ManagementGames}}</a>
                                 <ul class="d-menu" data-role="dropdown">
-                                    <li><a href="#/managementIntegrationGames">{{translation.AddGame}}</a></li>
-                                    <li><a href="">{{translation.GamesEdition}}</a></li>
-                                    <li><a href="">{{translation.ManagementIntegrationGameFeatures}}</a></li>
+                                    <li><a href="#/newGame">{{translation.AddGame}}</a></li>
+                                    <li><a href="#/managementIntegrationGames">{{translation.GamesEdition}}</a></li>
+                                    <li><a href="#/editGameFeatures">{{translation.ManagementIntegrationGameFeatures}}</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -120,91 +120,4 @@
             </div>
         </div>
     </div>
-
-    <!--<div class="menu">
-        <div style="height: 50px !important">
-            <div style="text-align: center;height: 50px !important">
-                <ul class="nav nav-pills" style="display: inline-block;height:  50px !important">
-                    <li>
-                        <a href="#/home" style="text-decoration: none ; color: darkorchid; border-radius: 0;"><span class="mif-home mif-2x "></span>Home</a>
-                    </li>
-                    <li>
-                        <a href="" style="text-decoration: none; color:crimson" data-toggle="dropdown"><span class="mif-bubble mif-2x"></span>{{translation.Language}}</a>
-                        <div class="dropdown-menu dropdown-menu-center " role="menu" style="background: rgba(255, 255, 255, .9); max-width: 200px !important">
-                            <div class="dropdown dropdown-lg">
-                                <form class=" form-horizontal" role="form">
-                                    <select class="form-control" data-ng-model="selectedLanguage" data-ng-change="translate(selectedLanguage)" data-ng-options="language.id as language.languageName for language in languages">
-                                        <option value=''>{{translation.ChooseLanguage}}</option>
-                                    </select>
-                                </form>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="" style="text-decoration: none;color: darkorange" data-toggle="dropdown"><span class="mif-search mif-2x"></span>{{translation.Search}}</a>
-                        <div class="dropdown-menu dropdown-menu-center" role="menu" style="background: rgba(255, 255, 255, .9)">
-                            <div class="dropdown dropdown-lg">
-                                <form class=" form-horizontal" role="form">
-                                    <div class="form-group">
-                                        <div class="input-group" id="adv-search">
-                                            <input type="text" class="form-control" placeholder="Search for snippets" />
-                                            <div class="input-group-btn">
-                                                <div class="btn-group" role="group">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="filter">Filter by</label>
-                                        <select class="form-control">
-                                            <option value="0" selected>Sie zobaczy</option>
-                                            <option value="1">Featured</option>
-                                            <option value="2">Most popular</option>
-                                            <option value="3">Top rated</option>
-                                            <option value="4">Most commented</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="contain">Author</label>
-                                        <input class="form-control" type="text" />
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="contain">Contains the words</label>
-                                        <input class="form-control" type="text" />
-                                    </div>
-                                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                                </form>
-                            </div>
-                        </div>
-                    </li>
-                    <li data-ng-hide="authentication.userName != 'Admin'">
-                        <a href="" style="text-decoration: none;color: white" data-toggle="dropdown"><span class="mif-wrench mif-2x"></span>{{translation.Tools}}</a>
-                        <div class="dropdown-menu dropdown-menu-center" role="menu" style="text-align: center; background: rgba(255, 255, 255, .9)">
-                            <div class="dropdown dropdown-lg">
-                                <div class="list-group">
-                                    <a href="#/managementIntegrationGames" class="list-group-item">{{translation.ManagementGames}}</a>
-                                    <a href="#/managementJokes" class="list-group-item">{{translation.ManagementJokes}}</a>
-                                    <a href="#/tokens" class="list-group-item">{{translation.ManagementAccounts}}</a>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li data-ng-hide="!authentication.isAuth">
-                        <a href="" style="text-decoration: none;color: chartreuse" data-ng-click="logOut()">
-                            <span style="" class="mif-exit mif-2x"></span>{{translation.LogOut}}
-                        </a>
-                    </li>
-                    <li data-ng-hide="authentication.isAuth">
-                        <a href="" style="text-decoration: none;color: chartreuse" data-toggle="dropdown"><span class="mif-enter mif-2x"></span>{{translation.Login}}</a>
-                        <div class="dropdown-menu dropdown-menu-center" role="menu" style="text-align: center; background: rgba(255, 255, 255, .9)">
-                            <div class="dropdown dropdown-lg">
-                                <div style="width: 500px" ng-include src="'/app/views/authentication.html'"></div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>-->
 </header>
