--- a/WebBellwether.Web/app/views/managementIntegrationGames.html
+++ b/WebBellwether.Web/app/views/managementIntegrationGames.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <h1>{{translation.ManagementGames}}</h1>
-    <h1 style="text-align: center">
+    <!--<h1 style="text-align: center">
         <button class="btn btn-success" data-toggle="collapse" data-target="#AdminPanel"><span class="glyphicon glyphicon-sort"></span> {{translation.MoreFunction}}</button>
     </h1>
     <div id="AdminPanel" class="panel-collapse collapse">
@@ -13,159 +13,10 @@
             </div>
         </div>
         <!--<div class="row">-->
-        <div class="col-md-6" style="text-align: left" ng-hide="integrationGamePanel">
-            <h1>{{translation.NewGame}}</h1>
-            <h1 style="color: #ce352c" ng-show="severalLanguagesForGame">{{translation.ForSeveralLanguages}} GameId = {{gameIdForSeveralLanguages}}</h1>
-            <form name="addGame" novalidate ng-submit="newGame(gameModel)">
-                <div class="form-group">
-                    <label for="language">{{translation.Language}}</label>
-                    <select id="language" class="form-control" required data-ng-model="gameModel.language" data-ng-change="getGameFeatureDetails(gameModel.language.id)" data-ng-options="language.languageName for language in languages">
-                        <option value=''>{{translation.SelectLanguageForTheGame}}</option>
-                    </select>
-                </div>
-
-                <div ng-hide="gameModel.language == null">
-                    <label>{{translation.SeveralLanguagesDescription}}</label>
-                    <div class="has-error">
-                        <div class="checkbox">
-                            <label style="font-weight: bold">
-                                <input ng-click="setSeveralLanguage()" type="checkbox" />
-                                {{translation.GameForSeveralLanguages}}
-                            </label>
-                        </div>
-                    </div>
-
-
-                    <!--GAME NAME-->
-                    <input type="text" class="form-control" required data-ng-model="gameModel.gameName" placeholder={{translation.GameName}} autofocus />
-
-                    <!--GAME DESCRIPTION-->
-                    <textarea style="margin-top: 20px" class="form-control" rows="10" required data-ng-model="gameModel.gameDetails" placeholder={{translation.GameDetails}}></textarea>
-
-                    <!--code below is f...-->
-                    <!--GAME FEATURES-->
-                    <div ng-repeat="featureDetail in featuresToFilter() | filter:filterFeatures">
-                        <label ng-hide="featureDetail.gameFeatureId != 1">
-                            {{translation.GameCategory}}
-                            {{test(1)}}
-                        </label>
-                        <label ng-hide="featureDetail.gameFeatureId != 2">
-                            {{translation.PaceOfPlay}}
-                            {{test(2)}}
-                        </label>
-                        <label ng-hide="featureDetail.gameFeatureId != 3">
-                            {{translation.NumberOfPlayer}}
-                            {{test(3)}}
-                        </label>
-                        <label ng-hide="featureDetail.gameFeatureId != 4">
-                            {{translation.PreparationFun}}
-                            {{test(4)}}
-                        </label>
-                        <select class="form-control" required data-ng-model="gameModel.features[$index]" data-ng-options="g.gameFeatureDetailId as g.gameFeatureDetailName for g in gameFeatureDetails | filter:{gameFeatureId: featureDetail.gameFeatureId}">
-                            <option value=''>
-                                {{featureDetail.gameFeatureId == 1 ? translation.SelectCategoryForGame : ''}}
-                                {{featureDetail.gameFeatureId == 2 ? translation.SelectPaceOfTheGame : ''}}
-                                {{featureDetail.gameFeatureId == 3 ? translation.SelectNumberOfPlayerForTheGame : ''}}
-                                {{featureDetail.gameFeatureId == 4 ? translation.SelectPreparationGame : ''}}
-                            </option>
-                        </select>
-                    </div>
-
-                    <!--SAVE GAME-->
-                    <div style="text-align: center">
-                        <button class="btn btn-primary btn-block" type="submit" ng-disabled="addGame.$invalid"><span class="glyphicon glyphicon-save"></span> {{translation.AddGame}}</button>
-                    </div>
-                    <!--USER NOTIFICATION FOR INSERT GAME-->
-                    <!--DESCRIPTION IN INTEGRATIOMGAMESCONTROLLER -> AddNewIntegrationGame-->
-                    <div class="animatedParent">
-                        <div ng-show="resultStateNewGame == 1">
-                            <h1 class="text-center animated bounceIn" style="color: #60a917; background-color: black;">{{translation.GameAdded}} </h1>
-                        </div>
-                        <div ng-show="resultStateNewGame == 2">
-                            <h1 class="text-center animated bounceIn" style="color: #ce352c; background-color: black;">{{translation.GameExists}}</h1>
-                        </div>
-                        <div ng-show="resultStateNewGame == 3">
-                            <h1 class="text-center animated bounceIn" style="color: #60a917; background-color: black;">{{translation.SeveralLanguageGameAdded}} </h1>
-                        </div>
-                        <div ng-show="resultStateNewGame == 4">
-                            <h1 class="text-center animated bounceIn" style="color: #ce352c">{{translation.SeveralLanguageGameError}}</h1>
-                        </div>
-                    </div>
-                </div>             
-            </form>
-        </div>
-
-        <div class="col-md-6" style="text-align: left" ng-hide="!integrationGamePanel">
-            <!--LANG FOR INTEGRATION GAMES-->
-            <h1>{{translation.GameFeatures}}</h1>
-            <div class="form-group">
-                <label for="language">{{translation.Language}}</label>
-                <select id="language" class="form-control" required data-ng-model="gameFeature.language" data-ng-change="getGameFeatures(gameFeature.language.id)" data-ng-options="language.languageName for language in languages">
-                    <option value=''>{{translation.ChooseLanguage}}</option>
-                </select>
-            </div>
-
-            <!--GAME FEATURES-->
-            <div ng-hide="gameFeature.language == null">
-                <label style="text-align: left;margin-bottom: 10px" ng-hide="gameFeatures[0].gameFeatureTemplateName == null">
-                    {{translation.FeatureDescription}}
-                </label>
-                <div class="has-error">
-                    <div class="checkbox">
-                        <label style="font-weight: bold">
-                            <input required data-ng-model="required1.val1" value="{{required1.val}}" type="checkbox" id="checkboxWarning" />
-                            {{translation.IKnowWhatIAmDoing}}
-                        </label>
-                    </div>
-                </div>
-                <div ng-repeat="gameFeature in gameFeatures">
-                    <div class="form-inline">
-                        <form class="form-group" novalidate ng-submit="editGameFeature(gameFeature)">
-                            <input ng-class="getClass(gameFeature.id,0)" ng-disabled=" required1.val1 == null" type="text" class="form-control" required data-ng-model="gameFeature.gameFeatureName" />
-                            <button type="submit" ng-disabled="!gameFeature.gameFeatureName.length || required1.val1 == null" class="btn btn-danger">{{translation.Save}}</button>
-                            <label ng-hide="gameFeature.gameFeatureTemplateName == null">
-                                {{gameFeature.gameFeatureTemplateName}}
-                            </label>
-                        </form>
-                    </div>
-                </div>
-
-                <!--GAME FEATURES DETAIL SELECT-->
-                <h1>{{translation.FeaturesDetails}}</h1>
-                <div class="form-group">
-                    <label for="details">{{translation.Details}}</label>
-                    <select id="details" class="form-control" data-ng-model="gameFeature.featureId" data-ng-options="gameFeature.id as gameFeature.gameFeatureName for gameFeature in gameFeatures">
-                        <option value=''>{{translation.SelectDetail}}</option>
-                    </select>
-                </div>
-
-            </div>
-            <!--GAME FEATURES DETAILS-->
-            <div ng-hide="gameFeature.language == null || gameFeature.featureId == null">
-                <div class="has-error">
-                    <div class="checkbox">
-                        <label style="font-weight: bold">
-                            <input required data-ng-model="required2.val1" value="{{required1.val}}" type="checkbox" />
-                            {{translation.IKnowWhatIAmDoing}}
-                        </label>
-                    </div>
-                </div>
-
-                <div ng-show="gameFeature.featureId > 0" ng-repeat="gameFeatureDetail in gameFeatureDetails | filter:{gameFeatureId : gameFeature.featureId} ">
-                    <div class="form-inline">
-                        <form class="form-group" name="gfdForm{{gameFeatureDetail.Id}}" novalidate ng-submit="editGameFeatureDetail(gameFeatureDetail)">
-                            <input ng-class="getClass(0,gameFeatureDetail.id)" ng-disabled="!gameFeatureDetail.gameFeatureDetailName.length || required2.val1 == null" type="text" class="form-control" required data-ng-model="gameFeatureDetail.gameFeatureDetailName" />
-                            <button class="btn btn-danger" ng-disabled="gfdForm{{gameFeatureDetail.Id}}.$invalid || !gameFeatureDetail.gameFeatureDetailName.length || required2.val1 == null">{{translation.Save}}</button>
-                            <label ng-hide="gameFeatureDetail.gameFeatureDetailTemplateName == null">
-                                {{gameFeatureDetail.gameFeatureDetailTemplateName}}
-                            </label>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
+       
         <!--</div>-->
-    </div>
+    <!--</div>-->-->
     <!--</div>
     <div class="container">-->
     <!--<div class="row">-->
