--- a/WebBellwether.Web/content/css/site.css
+++ b/WebBellwether.Web/content/css/site.css
@@ -27,8 +27,21 @@ body { background: url(/appData/videos/CloudFly.jpg) #000 no-repeat center cente
 .main-header {
     text-align: center;
 }
-
+.selectedTransparent {
+    
+}
 /*DEFINICJE KOLOROW*/ 
+.myFormColor {
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+}
+.selectedTransparent_hover {
+    background: rgba(0, 0, 0, 0.1);
+    color: black;
+}
+
+
+
 .color-myChartreuse {
   color: chartreuse !important;
 }
