--- a/WebBellwether.Web/content/css/animation.css
+++ b/WebBellwether.Web/content/css/animation.css
@@ -11,23 +11,9 @@
     margin: 20px;
 }
 
-/*to jest tylko test*/ 
-.cssSlideUp {
-    transition: .5s linear all;
-    height: 100px;
-    /*height:auto;*/
-    max-height:200px;
-    overflow: hidden;
-}
-.cssSlideUp.ng-hide {
-    height:0;
-}
-.cssFade {
-    transition: 0.5s linear all;
-    opacity: 1;
-}
-.cssFade.ng-hide {
-    opacity: 0;
+.slide-toggle {
+  overflow: hidden;
+  transition: all 1.5s; 
 }
 
 
