--- a/WebBellwether.Web/content/css/site.css
+++ b/WebBellwether.Web/content/css/site.css
@@ -1,44 +1,60 @@
 ﻿video#bgvid {
-position: fixed;
-top: 50%;
-left: 50%;
-min-width: 100%;
-min-height: 100%;
-width: auto;
-height: auto;
-z-index: -100;
--webkit-transform: translateX(-50%) translateY(-50%);
-transform: translateX(-50%) translateY(-50%);
-background: url(/appData/videos/CloudFly.jpg) no-repeat;
-background-size: cover;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url(/appData/videos/CloudFly.jpg) no-repeat;
+    background-size: cover;
 }
+
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, hr, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figure, figcaption, hgroup, menu, footer, header, main, nav, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
-video { display: block; }
+
+video {
+    display: block;
+}
 
 @media screen and (max-device-width: 800px) {
-body { background: url(/appData/videos/CloudFly.jpg) #000 no-repeat center center fixed; }
-#bgvid { display: none; }
+    body {
+        background: url(/appData/videos/CloudFly.jpg) #000 no-repeat center center fixed;
+    }
+
+    #bgvid {
+        display: none;
+    }
 }
+
+
+.test {
+    margin-top: 1000px
+}
+
+
 .main-header {
     text-align: center;
 }
+
 .selectedTransparent {
-    
 }
-.myFormColorImput{
-    border:none;   
-    font-size:large;
-    font-weight:bold;
+
+.myFormColorImput {
+    border: none;
+    font-size: large;
+    font-weight: bold;
 }
-.myFormColorImput:focus{
-   
-}
-/*DEFINICJE KOLOROW*/ 
+
+    .myFormColorImput:focus {
+    }
+/*DEFINICJE KOLOROW*/
 .myFormColor {
     background: rgba(0, 0, 0, 0.7);
     color: white;
@@ -51,25 +67,27 @@ body { background: url(/appData/videos/CloudFly.jpg) #000 no-repeat center cente
 
 .myFormColorWithBorder {
     background: rgba(0, 0, 0, 0.7);
-
     color: white;
-    border:2px solid rgba(0, 0, 0, 0);
+    border: 2px solid rgba(0, 0, 0, 0);
     background-clip: content-box;
 }
-.myFormColorWithBorder input[type="text"] {
-    background-color:transparent;
 
-    color: white;
-}
+    .myFormColorWithBorder input[type="text"] {
+        background-color: transparent;
+        color: white;
+    }
+
 .myFormColorTransparent {
     background: rgba(0, 0, 0, 0);
     color: white;
-    border:none;
+    border: none;
 }
-.myFormColor.form-control[disabled]{
+
+.myFormColor.form-control[disabled] {
     background: rgba(0, 0, 0, 0.7);
     color: white;
 }
+
 .selectedTransparent_hover {
     background: rgba(0, 0, 0, 0.1) !important;
     color: black !important;
@@ -77,26 +95,27 @@ body { background: url(/appData/videos/CloudFly.jpg) #000 no-repeat center cente
 
 .selectedTransparentWithBorder_hover {
     background: rgba(0, 0, 0, 0.1) !important;
-
     color: black !important;
     background-clip: content-box;
-    border:2px solid rgba(0, 0, 0, 0.7);
+    border: 2px solid rgba(0, 0, 0, 0.7);
 }
-.selectedTransparentWithBorder_hover input[type="text"]{
-    background-color:transparent;
 
-    color: black !important;
-    background-clip: content-box;
-}
+    .selectedTransparentWithBorder_hover input[type="text"] {
+        background-color: transparent;
+        color: black !important;
+        background-clip: content-box;
+    }
 
 
 
 .color-myChartreuse {
-  color: chartreuse !important;
+    color: chartreuse !important;
 }
+
 .color-myCrimson {
-  color: crimson !important;
+    color: crimson !important;
 }
+
 .bg-myTransparentBlack {
     background: rgba(0, 0, 0, 0.7);
 }
@@ -106,16 +125,17 @@ body { background: url(/appData/videos/CloudFly.jpg) #000 no-repeat center cente
     margin-right: -2px;
 }
 /*@*style="width: 1900px;height: 387px; overflow: hidden !important"*@*/
-/*JEZU PO 3 TYGODNIACH ODNALAZLEM WLASCIWA KONFIGURACJE JEDNAK O 2 w NOCY MOZNA COS JESZCZE ZROBIC*/ 
+/*JEZU PO 3 TYGODNIACH ODNALAZLEM WLASCIWA KONFIGURACJE JEDNAK O 2 w NOCY MOZNA COS JESZCZE ZROBIC*/
 .imageContainer {
-    margin: 0; 
+    margin: 0;
     height: 387px; /* change it to your value*/
     width: 100%; /* or use fixed width*/
     background: transparent url('') no-repeat center;
-    overflow: hidden; 
+    overflow: hidden;
 }
+
 .imageContainerMyFooter {
-    margin: 0; 
+    margin: 0;
     height: 630px; /* change it to your value*/
     width: 100%; /* or use fixed width*/
     background: transparent url('') no-repeat center;
@@ -127,12 +147,13 @@ body { background: url(/appData/videos/CloudFly.jpg) #000 no-repeat center cente
 .menu {
     position: absolute;
     z-index: 9999;
-    top:458px;
-    width:100%;
+    top: 458px;
+    width: 100%;
 }
+
 .fixed {
-    position:fixed;
-    top:0;
+    position: fixed;
+    top: 0;
     z-index: 9999;
     background: rgba(0, 0, 0, 0.7);
 }
@@ -148,226 +169,264 @@ body { background: url(/appData/videos/CloudFly.jpg) #000 no-repeat center cente
 
 
 .pagination {
-  display: inline-block;
-  padding-left: 0;
-  margin: 20px 0;
-  border-radius: 4px;
-}
-.pagination > li {
-  display: inline;
-}
-.pagination > li > a,
-.pagination > li > span {
-  position: relative;
-    float: left;
-  padding: 6px 12px;
-    margin-left: -1px;
-  line-height: 1.42857143;
-    color: white;
-  text-decoration: none;
-    background-color: black;
-    border: 1px solid white;
-}
-.pagination > li:first-child > a,
-.pagination > li:first-child > span {
-  margin-left: 0;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-.pagination > li:last-child > a,
-.pagination > li:last-child > span {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-.pagination > li > a:hover,
-.pagination > li > span:hover,
-.pagination > li > a:focus,
-.pagination > li > span:focus {
-    color: black;
-    background-color: transparent;
-    border-color: transparent;
-}
-.pagination > .active > a,
-.pagination > .active > span,
-.pagination > .active > a:hover,
-.pagination > .active > span:hover,
-.pagination > .active > a:focus,
-.pagination > .active > span:focus {
-  z-index: 2;
-    color: black;
-  cursor: default;
-    background-color: transparent;
-    border-color: transparent;
-}
-.pagination > .disabled > span,
-.pagination > .disabled > span:hover,
-.pagination > .disabled > span:focus,
-.pagination > .disabled > a,
-.pagination > .disabled > a:hover,
-.pagination > .disabled > a:focus {
-    color: black;
-  cursor: not-allowed;
-    background-color: transparent;
-    border-color: transparent;
-}
-.pagination-lg > li > a,
-.pagination-lg > li > span {
-  padding: 10px 16px;
-  font-size: 18px;
-}
-.pagination-lg > li:first-child > a,
-.pagination-lg > li:first-child > span {
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
-.pagination-lg > li:last-child > a,
-.pagination-lg > li:last-child > span {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-.pagination-sm > li > a,
-.pagination-sm > li > span {
-  padding: 5px 10px;
-  font-size: 12px;
-}
-.pagination-sm > li:first-child > a,
-.pagination-sm > li:first-child > span {
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-.pagination-sm > li:last-child > a,
-.pagination-sm > li:last-child > span {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-}
-.pager {
-  padding-left: 0;
-  margin: 20px 0;
-  text-align: center;
-  list-style: none;
-}
-.pager li {
-  display: inline;
-}
-.pager li > a,
-.pager li > span {
-  display: inline-block;
-  padding: 5px 14px;
-    background-color: black;
-    border: 1px solid black;
-    color: white;
-  border-radius: 15px;
-}
-.pager li > a:hover,
-.pager li > a:focus {
-  text-decoration: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    color: black;
-}
-.pager .next > a,
-.pager .next > span {
-  float: right;
-}
-.pager .previous > a,
-.pager .previous > span {
-  float: left;
-}
-.pager .disabled > a,
-.pager .disabled > a:hover,
-.pager .disabled > a:focus,
-.pager .disabled > span {
-  color: #777;
-  cursor: not-allowed;
-    background-color: transparent;
-    border: 1px solid transparent;
+    display: inline-block;
+    padding-left: 0;
+    margin: 20px 0;
+    border-radius: 4px;
 }
 
-/*navbar style*/ 
+    .pagination > li {
+        display: inline;
+    }
+
+        .pagination > li > a,
+        .pagination > li > span {
+            position: relative;
+            float: left;
+            padding: 6px 12px;
+            margin-left: -1px;
+            line-height: 1.42857143;
+            color: white;
+            text-decoration: none;
+            background-color: black;
+            border: 1px solid white;
+        }
+
+        .pagination > li:first-child > a,
+        .pagination > li:first-child > span {
+            margin-left: 0;
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+        }
+
+        .pagination > li:last-child > a,
+        .pagination > li:last-child > span {
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
+        }
+
+        .pagination > li > a:hover,
+        .pagination > li > span:hover,
+        .pagination > li > a:focus,
+        .pagination > li > span:focus {
+            color: black;
+            background-color: transparent;
+            border-color: transparent;
+        }
+
+    .pagination > .active > a,
+    .pagination > .active > span,
+    .pagination > .active > a:hover,
+    .pagination > .active > span:hover,
+    .pagination > .active > a:focus,
+    .pagination > .active > span:focus {
+        z-index: 2;
+        color: black;
+        cursor: default;
+        background-color: transparent;
+        border-color: transparent;
+    }
+
+    .pagination > .disabled > span,
+    .pagination > .disabled > span:hover,
+    .pagination > .disabled > span:focus,
+    .pagination > .disabled > a,
+    .pagination > .disabled > a:hover,
+    .pagination > .disabled > a:focus {
+        color: black;
+        cursor: not-allowed;
+        background-color: transparent;
+        border-color: transparent;
+    }
+
+.pagination-lg > li > a,
+.pagination-lg > li > span {
+    padding: 10px 16px;
+    font-size: 18px;
+}
+
+.pagination-lg > li:first-child > a,
+.pagination-lg > li:first-child > span {
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+}
+
+.pagination-lg > li:last-child > a,
+.pagination-lg > li:last-child > span {
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.pagination-sm > li > a,
+.pagination-sm > li > span {
+    padding: 5px 10px;
+    font-size: 12px;
+}
+
+.pagination-sm > li:first-child > a,
+.pagination-sm > li:first-child > span {
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+.pagination-sm > li:last-child > a,
+.pagination-sm > li:last-child > span {
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+.pager {
+    padding-left: 0;
+    margin: 20px 0;
+    text-align: center;
+    list-style: none;
+}
+
+    .pager li {
+        display: inline;
+    }
+
+        .pager li > a,
+        .pager li > span {
+            display: inline-block;
+            padding: 5px 14px;
+            background-color: black;
+            border: 1px solid black;
+            color: white;
+            border-radius: 15px;
+        }
+
+            .pager li > a:hover,
+            .pager li > a:focus {
+                text-decoration: none;
+                background-color: transparent;
+                border: 1px solid transparent;
+                color: black;
+            }
+
+    .pager .next > a,
+    .pager .next > span {
+        float: right;
+    }
+
+    .pager .previous > a,
+    .pager .previous > span {
+        float: left;
+    }
+
+    .pager .disabled > a,
+    .pager .disabled > a:hover,
+    .pager .disabled > a:focus,
+    .pager .disabled > span {
+        color: #777;
+        cursor: not-allowed;
+        background-color: transparent;
+        border: 1px solid transparent;
+    }
+
+/*navbar style*/
 
 .app-bar.myDarcula {
     background-color: transparent;
 }
-.app-bar.myDarcula .app-bar-element:hover,
-.app-bar.myDarcula .app-bar-menu > li:hover,
-.app-bar.myDarcula .app-bar-menu > li > a:hover,
-.app-bar.myDarcula .app-bar-element:active,
-.app-bar.myDarcula .app-bar-menu > li:active,
-.app-bar.myDarcula .app-bar-menu > li > a:active {
-  background-color: #1d1d1d;
-}
-.app-bar.myDarcula .app-bar-divider {
-  background-color: #616162;
-}
-.app-bar.myDarcula .app-bar-element .d-menu,
-.app-bar.myDarcula .app-bar-menu > li .d-menu {
-    background-color: rgba(0, 0, 0, 0.7);
-  border-color: transparent;
-}
-.app-bar.myDarcula .app-bar-element .d-menu li:not(.disabled) > a,
-.app-bar.myDarcula .app-bar-menu > li .d-menu li:not(.disabled) > a,
-.app-bar.myDarcula .app-bar-element .d-menu li > a,
-.app-bar.myDarcula .app-bar-menu > li .d-menu li > a {
-    background-color: transparent;
-  color: #ffffff;
-}
-.app-bar.myDarcula .app-bar-element .d-menu li:not(.disabled) > a:hover,
-.app-bar.myDarcula .app-bar-menu > li .d-menu li:not(.disabled) > a:hover,
-.app-bar.myDarcula .app-bar-element .d-menu li > a:hover,
-.app-bar.myDarcula .app-bar-menu > li .d-menu li > a:hover {
-  background-color: #1d1d1d;
-  color: #ffffff;
-}
-.app-bar.myDarcula .app-bar-element .d-menu li:hover > a,
-.app-bar.myDarcula .app-bar-menu > li .d-menu li:hover > a {
-  background-color: #1d1d1d;
-}
-.app-bar.myDarcula .app-bar-element .d-menu .divider,
-.app-bar.myDarcula .app-bar-menu > li .d-menu .divider {
-  background-color: #616162;
-}
-.app-bar.myDarcula .app-bar-element .d-menu .divider:hover,
-.app-bar.myDarcula .app-bar-menu > li .d-menu .divider:hover {
-  background-color: #616162;
-}
-.app-bar.myDarcula .app-bar-element .dropdown-toggle:before,
-.app-bar.myDarcula .app-bar-menu li .dropdown-toggle:before {
-  border-color: #ffffff;
-}
-.app-bar.myDarcula .app-bar-element.disabled,
-.app-bar.myDarcula .app-bar-menu li.disabled,
-.app-bar.myDarcula .app-bar-element:disabled,
-.app-bar.myDarcula .app-bar-menu li:disabled {
-  color: #555555;
-}
-.app-bar.myDarcula .app-bar-element.disabled a,
-.app-bar.myDarcula .app-bar-menu li.disabled a,
-.app-bar.myDarcula .app-bar-element:disabled a,
-.app-bar.myDarcula .app-bar-menu li:disabled a {
-  color: inherit !important;
-}
-.app-bar.myDarcula .app-bar-pullbutton:hover {
-  background-color: #1d1d1d;
-}
-.app-bar.myDarcula .app-bar-drop-container {
-    border: 2px solid black;
-  background-color: rgba(255, 255, 255, 0.9);
-    color: black;
-}
-.app-bar.myDarcula .app-bar-drop-container:before {
-  background-color: #3c3f41;
-  border-color: #3c3f41;
-}
-.app-bar.myDarcula .app-bar-pullmenu .app-bar-menu {
-  border-top: 1px solid #616162;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-.app-bar.myDarcula .app-bar-pullmenu .app-bar-menu li:hover {
-  background-color: #3c3f41;
-}
-.app-bar.myDarcula .app-bar-pullmenu .app-bar-menu li:hover a {
-  background-color: #1d1d1d;
-  color: #ffffff;
-}
+
+    .app-bar.myDarcula .app-bar-element:hover,
+    .app-bar.myDarcula .app-bar-menu > li:hover,
+    .app-bar.myDarcula .app-bar-menu > li > a:hover,
+    .app-bar.myDarcula .app-bar-element:active,
+    .app-bar.myDarcula .app-bar-menu > li:active,
+    .app-bar.myDarcula .app-bar-menu > li > a:active {
+        background-color: #1d1d1d;
+    }
+
+    .app-bar.myDarcula .app-bar-divider {
+        background-color: #616162;
+    }
+
+    .app-bar.myDarcula .app-bar-element .d-menu,
+    .app-bar.myDarcula .app-bar-menu > li .d-menu {
+        background-color: rgba(0, 0, 0, 0.7);
+        border-color: transparent;
+    }
+
+        .app-bar.myDarcula .app-bar-element .d-menu li:not(.disabled) > a,
+        .app-bar.myDarcula .app-bar-menu > li .d-menu li:not(.disabled) > a,
+        .app-bar.myDarcula .app-bar-element .d-menu li > a,
+        .app-bar.myDarcula .app-bar-menu > li .d-menu li > a {
+            background-color: transparent;
+            color: #ffffff;
+        }
+
+            .app-bar.myDarcula .app-bar-element .d-menu li:not(.disabled) > a:hover,
+            .app-bar.myDarcula .app-bar-menu > li .d-menu li:not(.disabled) > a:hover,
+            .app-bar.myDarcula .app-bar-element .d-menu li > a:hover,
+            .app-bar.myDarcula .app-bar-menu > li .d-menu li > a:hover {
+                background-color: #1d1d1d;
+                color: #ffffff;
+            }
+
+        .app-bar.myDarcula .app-bar-element .d-menu li:hover > a,
+        .app-bar.myDarcula .app-bar-menu > li .d-menu li:hover > a {
+            background-color: #1d1d1d;
+        }
+
+        .app-bar.myDarcula .app-bar-element .d-menu .divider,
+        .app-bar.myDarcula .app-bar-menu > li .d-menu .divider {
+            background-color: #616162;
+        }
+
+            .app-bar.myDarcula .app-bar-element .d-menu .divider:hover,
+            .app-bar.myDarcula .app-bar-menu > li .d-menu .divider:hover {
+                background-color: #616162;
+            }
+
+    .app-bar.myDarcula .app-bar-element .dropdown-toggle:before,
+    .app-bar.myDarcula .app-bar-menu li .dropdown-toggle:before {
+        border-color: #ffffff;
+    }
+
+    .app-bar.myDarcula .app-bar-element.disabled,
+    .app-bar.myDarcula .app-bar-menu li.disabled,
+    .app-bar.myDarcula .app-bar-element:disabled,
+    .app-bar.myDarcula .app-bar-menu li:disabled {
+        color: #555555;
+    }
+
+        .app-bar.myDarcula .app-bar-element.disabled a,
+        .app-bar.myDarcula .app-bar-menu li.disabled a,
+        .app-bar.myDarcula .app-bar-element:disabled a,
+        .app-bar.myDarcula .app-bar-menu li:disabled a {
+            color: inherit !important;
+        }
+
+    .app-bar.myDarcula .app-bar-pullbutton:hover {
+        background-color: #1d1d1d;
+    }
+
+    .app-bar.myDarcula .app-bar-drop-container {
+        border: 2px solid black;
+        background-color: white;
+        color: black;
+    }
+
+        .app-bar.myDarcula .app-bar-drop-container:before {
+            background-color: transparent;
+            border-color: #3c3f41;
+        }
+
+    .app-bar.myDarcula .app-bar-pullmenu .app-bar-menu {
+        border-top: 1px solid #616162;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+
+        .app-bar.myDarcula .app-bar-pullmenu .app-bar-menu li:hover {
+            background-color: #3c3f41;
+        }
+
+            .app-bar.myDarcula .app-bar-pullmenu .app-bar-menu li:hover a {
+                background-color: #1d1d1d;
+                color: #ffffff;
+            }
+
 
 
